--- a/first-react/src/App.scss
+++ b/first-react/src/App.scss
@@ -26,10 +26,11 @@ footer {
     margin: 0;
 }
 #output {
-    width: 480px;
-    height: 300px;
+    width: 700px;
     background-color: rgb(253, 247, 247);
     border-radius: 20px;
+    padding: 25px;
+    margin: auto;
 }
 input[type="radio"] {
     margin-top: 25px;
