--- a/src/design/design.scss
+++ b/src/design/design.scss
@@ -28,10 +28,31 @@ footer {
 #output {
     width: 700px;
     background-color: rgb(253, 247, 247);
-    border-radius: 20px;
+    border: black solid;
+    // border-radius: 20px;
     padding: 25px;
     margin: auto;
+    max-height: 400px;
+    overflow: auto;
 }
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
 input[type="radio"] {
     margin-top: 25px;
     margin-bottom: 25px;
@@ -47,4 +68,8 @@ section {
     flex-wrap: wrap;
     align-content:center;
     flex-direction: column;
+}
+#asd{
+    position: relative;
+    bottom: 30px;
 }
